--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/stack": "^6.3.21",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "typescript": "^5.3.0"
   },
