--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.10",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.21",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
@@ -17,9 +20,11 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
