--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^14.1.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
     "typescript": "^5.3.0"
   },
