--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.21",
     "expo": "~50.0.7",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^10.8.0",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.1",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
