--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.21",
     "expo": "~50.0.7",
     "expo-image-picker": "^14.7.1",
+    "expo-mail-composer": "^12.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.9.0",
     "react": "18.2.0",
